--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,9 +82,13 @@ dependencies {
 
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    implementation 'com.squareup.moshi:moshi:1.14.0'
+    /* implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+
+     implementation 'com.squareup.moshi:moshi:1.14.0'
+
+     */
 
 
     //androidTestImplementation 'com.jakewharton.espresso:okhttp3-idling-resource:1.0.0'
