--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -14,10 +16,14 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        //testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
         }
+
+
+        testInstrumentationRunner = "com.example.groovyapp.CustomTestRunner"
+
     }
 
     buildTypes {
@@ -73,6 +79,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-inline:2.21.0'
     testImplementation 'org.mockito:mockito-core:5.3.1'
     testImplementation 'androidx.arch.core:core-testing:2.2.0'
+    testImplementation 'org.mockito:mockito-core:5.3.1'
+
 
 
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2")
@@ -84,20 +92,22 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    /* implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
 
-     implementation 'com.squareup.moshi:moshi:1.14.0'
+    kaptTest("com.google.dagger:hilt-android-compiler:2.44")
 
-     */
+    // For instrumented tests.
+    androidTestImplementation("com.google.dagger:hilt-android-testing:2.44")
+    // ...with Kotlin.
+    kaptAndroidTest("com.google.dagger:hilt-android-compiler:2.44")
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
 
     //androidTestImplementation 'com.jakewharton.espresso:okhttp3-idling-resource:1.0.0'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.5.1')
     androidTestImplementation("androidx.test:runner:1.5.2")
     androidTestImplementation("androidx.test.ext:junit:1.1.5")
-
-
-
 
 
 }
